fix text overflow

--- a/style.css
+++ b/style.css
@@ -111,6 +111,13 @@ section .task-column .task {
     cursor: grab;
 }
 
+/* text overflow */
+section .task-column .task h2,
+section .task-column .task p {
+    overflow-wrap: anywhere;
+    word-break: break-word;
+}
+
 section .task-column .task button {
     align-self: flex-end;
     cursor: pointer;
